welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: ';' expected but ')' found.
	else if (Math.abs ( 10 - b )) < (Math.abs ( 10 - a ))) { return b }
                                                             ^